removed flexbox from work-images to fix squashing. i hope.

--- a/css/main.scss
+++ b/css/main.scss
@@ -117,9 +117,9 @@ Works pages styles
     }
   }
   .works-image {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: flex-start;
     margin-top: 10vh;
     @media screen and (max-width: $break-small) {
       margin-top:15vh;
